2012-08-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/common.h src/samplerate.c
    Add SRC_ERR_BAD_INTERNAL_STATE error number and string.
    Move function is_bad_src_ratio() to common.h.

    * src/src_linear.c src/src_sinc.c src/src_zoh.c
    Validate internally stashed src_ratio value.

2012-08-23  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/multi_channel_test.c tests/snr_bw_test.c tests/varispeed_test.c
    Use fftw_cleanup() to remove all memory leaks reported by valgrind.

    * doc/license.html
    Specify GPLv2 or GPLv3.

2012-08-22  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/src_sinc.c
    Cleanup calculation of float_increment.

2012-03-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.c
    Fix error message for error SRC_ERR_BAD_DATA_PTR. Thanks for oneman in
    #xiph on Freenode.

    * examples/audio_out.c
    Minor tweaks to Windows and OSX code.

2011-11-05  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.h
    Removed unused typedef struct SRC_CB_DATA.

    * examples/varispeed-play.c
    Rewrite to use the callback version of the API. This new version is far
    simpler and far easier to understand.

2011-11-02  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac examples/Makefile.am
    Detect ALSA and use it in varispeed-play.

    * examples/audio_out.[ch]
    On Linux used ALSA instead of OSS when available.

    * src/samplerate.c src/src_linear.c src/src_zoh.c \
            examples/sndfile-resample.c examples/timewarp-file.c
    Fix warnings from the Goanna static analysis tool.

2011-08-15  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Add symbol support for kfreebsd-*-gnu-*.

    * configure.ac doc/Makefile.am
    Improve installation of html docs.

    * examples/audio_out.c tests/callback_hang_test.c
    Fix compiler warnings.

    * NEWS README Win32/config.h doc/*.html