@@ -1,3 +1,8 @@
+2012-09-28  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * tests/varispeed_test.c
+    FIx compile error.
+
 2012-08-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/common.h src/samplerate.c
